files/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: 5gc-gateway
  namespace: 5gc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP2
    hosts:
    - "*"
  - port:
      number: 30080
      name: http_sim
      protocol: HTTP2
    hosts:
    - "*"
      #  - port:
      #      number: 443
      #      name: https
      #      protocol: HTTPS
      #    hosts:
      #    - "*"
      #    tls:
      #      mode: SIMPLE
      #      credentialName: ingress-gateway-credential # must be the same as secret
      #      #serverCertificate: /root/5gc/ingress/istio/ingress.crt
      #      #privateKey: /root/5gc/ingress/istio/ingress.key
